--- a/src/theme/variable.scss
+++ b/src/theme/variable.scss
@@ -32,7 +32,6 @@ $color-white: #f8f8f8;
 $color-primary: #ef3688;
 $color-secondary: #ffd200;
 $icon-default-color: #ffffff;
-$table-bg-color: #fbae01;
 $table-text-color: #6a4a02;
 $table-sm-color: #fe7b03;
 
@@ -47,6 +46,8 @@ $color-smooth-black: #e4e4e4;
 $color-red-crimson: #fc404a;
 $color-crimson-opacity: #fc4049d8;
 $color-crimson-opacity-2: #6f0d1272;
+$star-color: #fbae01;
+
 
 // FONT SIZE
 $font-title-size: 24px;
