--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -466,7 +466,7 @@
         [class.proactive]="proFeature"
         class="product-cards feature-product animated"
       >
-        <ng-container *ngFor="let data of [0, 1, 2, 4, 5, 6, 7, 8, 8, 10]">
+        <ng-container *ngFor="let data of [0, 1, 2, 4, 5]">
           <div class="product-card">
             <div class="product-img">
               <a href="#">
@@ -516,7 +516,7 @@
         [class.proactive]="proLatest"
         class="product-cards latest-product animated"
       >
-        <ng-container *ngFor="let data of [0, 1, 2, 4, 5, 6, 7, 8, 8, 10]">
+        <ng-container *ngFor="let data of [0, 1, 2, 4, 5]">
           <div class="product-card">
             <div class="product-img">
               <a href="#">
@@ -566,7 +566,7 @@
         [class.proactive]="proBestseller"
         class="product-cards bestseller-product animated"
       >
-        <ng-container *ngFor="let data of [0, 1, 2, 4, 5, 6, 7, 8, 8, 10]">
+        <ng-container *ngFor="let data of [0, 1, 2, 4, 5]">
           <div class="product-card">
             <div class="product-img">
               <a href="#">
