complete header section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -613,6 +613,14 @@
     </div>
   </section>
 
+  <section class="offer-text">
+    <h1>Rewards just for shopping!</h1>
+    <p>
+      Don’t forget to opt into Multistore News to have your offers and rewards
+      delivered right to your inbox!
+    </p>
+  </section>
+
   <br />
   <br />
   <br />
